--- a/templates/includes/cover.html
+++ b/templates/includes/cover.html
@@ -27,6 +27,8 @@
                   {% else %}
                     <p>Add address of your restaurant</p>
                   {% endif %}
+                  <i class="icon-envelope"></i>
+                  <p>{{ user.email }}</p>
                 </div>
               </div>
             </div>
