--- a/templates/orders/new_order_vendor_email.html
+++ b/templates/orders/new_order_vendor_email.html
@@ -1,8 +1,203 @@
-{% autoescape off %}
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional //EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:v="urn:schemas-microsoft-com:vml" lang="en">
+
+<head><link rel="stylesheet" type="text/css" hs-webfonts="true" href="https://fonts.googleapis.com/css?family=Lato|Lato:i,b,bi">
+    <meta property="og:title" content="Email template">  
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <style type="text/css">
+      #email {
+        margin: auto;
+        width: 600px;
+        background-color: white;
+      }  
+      .activate-btn{
+        font: inherit;
+        background-color: #C33332;
+        border: none;
+        padding: 10px;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        font-weight: 900;
+        border-radius: 5px; 
+        text-decoration: none;
+      }      
+    </style>    
+  </head>    
+<body bgcolor="#F5F8FA" style="width: 100%; margin: auto 0; padding:0; font-family:Lato, sans-serif; font-size:16px; color:#33475B; word-break:break-word">
+  
+<div id="email">
+  <table role="presentation" width="100%">
+    <tr>
+    <td  align="center" style="color: white;">
+     <img alt="Logo" src="https://drive.google.com/drive/u/0/recent" width="400px" align="middle">
+      </td>
+  </table>
+
+  <table bgcolor="#EAF0F6" width="100%" role="presentation" border="0" cellpadding="0" cellspacing="10px" style="padding: 30px 30px 60px 60px;">
+    <tr>
+      <td>
+        <h2 style="text-align: center;">You have received a new order.</h2>
+      </td> 
+    </tr>
+    <tr>
+        <td style="font-weight: bold;">Review your order information</td>
+    </tr>
+    <tr>
+        <td>Order Number: {{order.order_number}}</td>
+    </tr>
+    <tr>
+        <td>Total Amount: ₹ {{vendor_grand_total}}</td>
+    </tr>
+    <tr>
+        <td>Payment Method: {{order.payment_method}}</td>
+    </tr>
+    <tr>
+        <td>Transaction ID: {{order.payment.transaction_id}}</td>
+    </tr>
+    <tr>
+        <td>Ordered Date: {{order.created_at}}</td>
+    </tr>
+  </table>
+
+
+  <!-- Show food items ordered -->
+  <table bgcolor="#EAF0F6" width="100%" role="presentation" border="0" cellpadding="0" cellspacing="10px" style="padding: 30px 5px 60px 5px;">
+    <tbody>
+        <tr>
+            <!-- <th>Vendor</th> -->
+            <th>Food Image</th>
+            <th>Food Item</th>
+            <th>Price </th>
+            <th>Quantity</th>
+        </tr>
+        {% for item in ordered_food_from_vendor  %}
+            <tr>
+                <!-- <td style="text-align: center;"><a href="http://{{domain}}{% url 'vendor_detail' item.fooditem.vendor.vendor_slug %}">{{item.fooditem.vendor.vendor_name}}</a></td> -->
+                <td><img src="http://{{domain}}{{ item.fooditem.image.url }}" alt="Food Image" width="60" ></td>
+                <td style="text-align: center;"><p style="margin: 0; font-weight: bold;">{{ item.fooditem }}</p></td>
+                <td style="text-align: center;"> {{ item.quantity }} </td>
+                <td style="text-align: center;">₹ {{ item.fooditem.price }}</td>
+            </tr>
+        {% endfor %}
+
+    </tbody>
+  </table>
+
+  <!-- Order Amount -->
+  <table bgcolor="#EAF0F6" width="100%" role="presentation" border="0" cellpadding="0" cellspacing="10px" style="padding: 30px 5px 60px 5px;">
+    <tbody>
+        <tr>Subtotal: {{vendor_subtotal}}</tr>
+        
+        {% for key, value in tax_data.items %}
+            
+            {% for i,j in value.items %}
+                <tr>{{key}} <small>({{i}}%)</small> : <span>₹ {{j}}</span></tr>
+            {% endfor %}
+                
+        {% endfor %}
+        <tr>Grand total: ₹ {{vendor_grand_total}}</tr>
+    </tbody>
+    </table>
+
+  <table role="presentation" bgcolor="#D9E8F5" width="100%" style="padding: 8px 16px; color: #000;">
+    <tr>
+        <td>If you have any questions or need further assistance, please don't hesitate to contact our customer service team at <a href="mailto:umbatimba2324@gmail.com">umbatimba2324@gmail.com</a></td>
+    </tr>
+    <tr>
+        <td>Thank you for choosing Umba Timba Online Marketplace. We hope you enjoy your meal!</td>
+    </tr>
+    <tr>
+        <td><br>
+            Best regards, <br>
+            The Umba Timba Online Marketplace Team
+        </td>
+    </tr>
+      
+  </table>
+
+  <table role="presentation" bgcolor="#C33332" width="100%">
+      <tr>
+        <td align="center" style="padding: 15px 15px; color: #fff;">
+          <p>© {% now "Y" %} Umba Timba Marketplace, All Rights Reserved.</p>
+          <a href="http://{{domain}}" style="color:#fff;">Visit Website</a>      
+        </td>
+      </tr>
+  </table> 
+</div>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- {% autoescape off %}
 Hi {{user.first_name}},
 
 
-You have received a new order.
+
 
 Here are the details of your order:
 - **Order Number**: {{order.order_number}}
@@ -18,4 +213,4 @@ Thank you for choosing Umba Timba Online Marketplace. We hope you enjoy your mea
 
 Best regards,
 The Umba Timba Online Marketplace Team
-{% endautoescape %}
+{% endautoescape %} -->
